# sqlx_binder

./: Cargo.toml  LICENSE  README.md
src/: attrs.rs  lib.rs
tests/: test.rs
